--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,18 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
+  height: 100vh;
+  color: white;
+  font-family: "Roboto Mono", monospace;
+}
+
+.container {
+  background: url("../images/register.jpg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 }
