--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,4 +15,63 @@ body {
   width: 100%;
   height: 100%;
   background-size: cover;
+  display: grid;
+  place-items: center;
+}
+
+.background {
+  background: rgba(0, 0, 0, 0.7);
+  width: 35%;
+  height: 70%;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+
+.login-form input {
+  /* padding: 2%; */
+  width: 70%;
+  height: 7%;
+  background: transparent;
+  color: white;
+  border: none;
+  box-shadow: 0 0 3px white;
+}
+
+.login-form input:focus {
+  outline: none;
+  border: none;
+}
+
+.login-form button {
+  width: 40%;
+  height: 10%;
+  background: transparent;
+  color: white;
+  border: none;
+  box-shadow: 0 0 3px white;
+  font-size: larger;
+  transition: 0.3s ease-in;
+}
+
+.login-form button:hover {
+  background: rgba(255, 255, 255, 1);
+  color: black;
+}
+
+.login-form a {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.login-form a:hover {
+  color: white;
+}
+
+.login-form a:visited {
+  color: rgba(255, 255, 255, 0.7);
 }
