--- a/styles/register.css
+++ b/styles/register.css
@@ -6,4 +6,72 @@
 
 body {
   height: 100vh;
+  color: white;
+  font-family: "Roboto Mono", monospace;
+}
+
+.container {
+  background: url("../images/register.jpg");
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  display: grid;
+  place-items: center;
+}
+
+.background {
+  background: rgba(0, 0, 0, 0.7);
+  width: 35%;
+  height: 70%;
+}
+
+.register-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+
+.register-form input {
+  /* padding: 2%; */
+  width: 70%;
+  height: 7%;
+  background: transparent;
+  color: white;
+  border: none;
+  box-shadow: 0 0 3px white;
+}
+
+.register-form input:focus {
+  outline: none;
+  border: none;
+}
+
+.register-form button {
+  width: 40%;
+  height: 10%;
+  background: transparent;
+  color: white;
+  border: none;
+  box-shadow: 0 0 3px white;
+  font-size: larger;
+  transition: 0.3s ease-in;
+}
+
+.register-form button:hover {
+  background: rgba(255, 255, 255, 1);
+  color: black;
+}
+
+.register-form a {
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.register-form a:hover {
+  color: white;
+}
+
+.register-form a:visited {
+  color: rgba(255, 255, 255, 0.7);
 }
