--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,12 +42,14 @@ body {
   background: transparent;
   color: white;
   border: none;
-  box-shadow: 0 0 3px white;
+  border-bottom: 1px solid white;
+  font-size: larger;
 }
 
 .login-form input:focus {
   outline: none;
   border: none;
+  border-bottom: 1px solid white;
 }
 
 .login-form button {
@@ -56,7 +58,7 @@ body {
   background: transparent;
   color: white;
   border: none;
-  box-shadow: 0 0 3px white;
+  border: 1px solid white;
   font-size: larger;
   transition: 0.3s ease-in;
 }
