--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +9,7 @@
 body {
   height: 100vh;
   color: white;
-  font-family: "Roboto Mono", monospace;
+  font-family: "Roboto", sans-serif;
   text-align: center;
 }
 
