--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,9 +1,21 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    height: 100vh;
+  height: 100vh;
+}
+
+#create-product-modal {
+  display: none;
+}
+
+#create-product-modal.active {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background: rgba(255, 255, 255, 0.5);
 }
