--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -8,77 +6,16 @@
 
 body {
   height: 100vh;
-  color: white;
-  font-family: "Roboto", sans-serif;
-  text-align: center;
 }
 
-.container {
-  background: url("../images/register.jpg");
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  display: grid;
-  place-items: center;
+#create-product-modal {
+  display: none;
 }
 
-.background {
-  background: rgba(0, 0, 0, 0.7);
-  width: 35%;
-  height: 70%;
-  box-shadow: 0 0 5px #000;
-  border-radius: 5px;
-}
-
-.login-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  height: 100%;
-}
-
-.login-form input {
-  /* padding: 2%; */
-  width: 70%;
-  height: 7%;
-  background: transparent;
-  color: white;
-  border: none;
-  border-bottom: 1px solid white;
-  font-size: larger;
-}
-
-.login-form input:focus {
-  outline: none;
-  border: none;
-  border-bottom: 1px solid white;
-}
-
-.login-form button {
-  width: 40%;
-  height: 10%;
-  background: transparent;
-  color: white;
-  border: none;
-  border: 1px solid white;
-  font-size: larger;
-  transition: 0.3s ease-in;
-}
-
-.login-form button:hover {
-  background: rgba(255, 255, 255, 1);
-  color: black;
-}
-
-.login-form a {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.login-form a:hover {
-  color: white;
-}
-
-.login-form a:visited {
-  color: rgba(255, 255, 255, 0.7);
+#create-product-modal.active {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background: rgba(255, 255, 255, 0.5);
 }
