--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,3 +22,50 @@ body {
   left: 50%;
   background: rgba(255, 255, 255, 0.5);
 }
+
+.navbar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1%;
+  position: fixed;
+  color: white;
+}
+
+.navigation {
+  width: 15%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.cart-profile {
+  width: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-size: larger;
+}
+
+.navbar a:hover {
+  transform: scale(120%);
+}
+
+.navbar a:visited {
+  color: white;
+}
+
+.landing {
+  background: url("../images/landing.jpg");
+  width: 100%;
+  height: 80%;
+  background-attachment: fixed;
+  background-size: cover;
+}
