--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,11 @@ body {
   padding: 1%;
   position: fixed;
   color: white;
+  text-shadow: 1px 0 black, -1px 0 black, 0 1px black, 0 -1px black;
+}
+
+.navbar h1 {
+  font-size: 28px;
 }
 
 .navigation {
@@ -52,6 +57,7 @@ body {
   color: white;
   text-decoration: none;
   font-size: larger;
+  transition: 0.5s ease-in;
 }
 
 .navbar a:hover {
