--- a/styles/profile.css
+++ b/styles/profile.css
@@ -10,3 +10,49 @@ body {
   height: 100vh;
   font-family: "Roboto", sans-serif;
 }
+
+.navbar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1%;
+  position: fixed;
+  color: white;
+  text-shadow: 1px 0 black, -1px 0 black, 0 1px black, 0 -1px black;
+}
+
+.navbar h1 {
+  font-size: 28px;
+}
+
+.cart-back {
+  width: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-size: larger;
+  transition: 0.5s ease-in;
+}
+
+.navbar a:hover {
+  transform: scale(120%);
+}
+
+.navbar a:visited {
+  color: white;
+}
+
+.landing {
+  background: url("../images/profile.jpg");
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  background-size: cover;
+}
