--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .navigation {
-  width: 15%;
+  width: 30%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -64,24 +64,44 @@ body {
   background-size: cover;
 }
 
-#about-products {
+#about-us {
   width: 100%;
-  height: 70%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-#about-products h1 {
+#about-us h1 {
   margin-bottom: 2%;
 }
 
-#about-products p {
+#about-us p {
   text-align: center;
   width: 70%;
   font-size: larger;
   font-weight: lighter;
+}
+
+.about-products {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-products img {
+  width: 50%;
+  height: 10%;
+}
+
+.best-seller {
+  display: flex;
+  flex-direction: row;
+}
+
+.set {
+  display: flex;
+  flex-direction: row;
 }
 
 #create-product-modal {
