--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,7 @@ body {
   background-size: cover;
 }
 
-#about-us {
+.about-us {
   width: 100%;
   height: 80%;
   display: flex;
@@ -73,35 +73,53 @@ body {
   align-items: center;
 }
 
-#about-us h1 {
+.about-us h1 {
   margin-bottom: 2%;
 }
 
-#about-us p {
+.about-us p {
   text-align: center;
   width: 70%;
   font-size: larger;
   font-weight: lighter;
+  text-shadow: 0 0 1px black;
 }
 
-.about-products {
+#about-products {
   display: flex;
   flex-direction: column;
+  justify-self: space-between;
 }
 
-.about-products img {
-  width: 50%;
-  height: 10%;
+#about-products img {
+  width: 40%;
+  border-radius: 2px;
+}
+
+.about-products-description h2 {
+  font-size: 28px;
+}
+
+.about-products-description p {
+  font-size: larger;
+  font-weight: lighter;
+  text-shadow: 0 0 1px black;
 }
 
 .best-seller {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10%;
 }
 
 .set {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10%;
 }
 
 #create-product-modal {
