Preparing to do contact page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -156,3 +156,18 @@ body {
 .addImage {
   display: none;
 }
+
+/* CONTACT FORM */
+#contact {
+  display: grid;
+  place-items: center;
+  background: grey;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background: white;
+}
