--- a/styles/styles.css
+++ b/styles/styles.css
@@ -161,13 +161,72 @@ body {
 #contact {
   display: grid;
   place-items: center;
-  background: grey;
+  background: url("../images/landing.jpg");
+  height: 100%;
+  background-size: cover;
+  background-position: bottom;
+  background-attachment: fixed;
 }
 
 .contact-form {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  width: 40%;
+  height: 80%;
+  background: rgba(0, 0, 0, 0.8);
+  /* filter: blur(3px); */
+  border-radius: 3px;
+  box-shadow: 0 0 3px black;
+  transition: 0.2s ease-in;
+}
+
+/* .contact-form:hover {
+  filter: blur(0);
+} */
+
+.contact-form input {
+  width: 40%;
+  height: 10%;
+  color: white;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+}
+
+.contact-form input:focus {
+  outline: none;
+  border: none;
+}
+
+#message {
+  color: white;
+  background: black;
+}
+
+#contact-button {
+  width: 30%;
+  height: 10%;
+  color: white;
+  background: black;
+  border: 1px solid white;
+  transition: 0.3s ease-in;
+}
+
+#contact-button:hover {
+  color: black;
   background: white;
+}
+
+/* FOOTER */
+#footer {
+  background: black;
+  color: white;
+  width: 100%;
+  height: 7%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 0 0 2px white;
 }
