--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,15 +158,28 @@ body {
 }
 
 /* CONTACT FORM */
-#contact {
-  display: grid;
-  place-items: center;
-  background: url("../images/landing.jpg");
+.contact-filter {
+  width: 100%;
   height: 100%;
+  background: grey;
+  position: absolute;
+  background: url("../images/landing.jpg");
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed;
 }
+
+#contact {
+  display: grid;
+  place-items: center;
+  background: transparent;
+  height: 100%;
+  position: relative;
+}
+
+/* #contact.blur {
+  backdrop-filter: blur(3px);
+} */
 
 .contact-form {
   display: flex;
@@ -200,11 +213,6 @@ body {
   outline: none;
   border: none;
   border-bottom: 1px solid white;
-}
-
-#message {
-  color: white;
-  background: black;
 }
 
 #contact-button {
