--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,8 +147,8 @@ body {
 #create-product-modal.active {
   display: block;
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 40%;
+  left: 18%;
   background: rgba(0, 0, 0, 0.3);
 }
 
@@ -175,11 +175,13 @@ body {
   background: transparent;
   height: 100%;
   position: relative;
+  transition: 0.3s ease-in;
 }
 
-/* #contact.blur {
-  backdrop-filter: blur(3px);
-} */
+#contact.blur {
+  backdrop-filter: blur(7px);
+  /* mask: inherit; */
+}
 
 .contact-form {
   display: flex;
