Touched on responsiveness

--- a/styles/login.css
+++ b/styles/login.css
@@ -26,6 +26,8 @@ body {
   background: rgba(0, 0, 0, 0.7);
   width: 35%;
   height: 70%;
+  min-width: 457px;
+  min-height: 442px;
   box-shadow: 0 0 5px #000;
   border-radius: 5px;
 }
