--- a/styles/register.css
+++ b/styles/register.css
@@ -26,6 +26,8 @@ body {
   background: rgba(0, 0, 0, 0.7);
   width: 35%;
   height: 70%;
+  min-width: 457px;
+  min-height: 442px;
   box-shadow: 0 0 5px #000;
   border-radius: 5px;
 }
@@ -80,4 +82,21 @@ body {
 
 .register-form a:visited {
   color: rgba(255, 255, 255, 0.7);
+}
+
+/* KEYFRAMES */
+@media screen and (max-width: 600px) {
+  .background {
+    width: 70%;
+    height: 70%;
+    min-width: 0;
+    min-height: 0;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .background {
+    width: 250px;
+    height: 420px;
+  }
 }
