--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,22 +158,24 @@ body {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-  padding: 10px;
+  border-radius: 2px;
+  /* box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5); */
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .product-image {
-  width: 250px;
+  width: 100%;
   height: 250px;
   object-fit: cover;
-  border-radius: 5px;
 }
 
 .card-description {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding: 2%;
 }
 
 .product-title {
@@ -190,7 +192,7 @@ body {
 }
 
 .addToCart {
-  width: 70%;
+  width: 80%;
   color: black;
   background: transparent;
   border: 1px solid black;
