--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,8 +159,8 @@ body {
   align-items: center;
   text-align: center;
   border-radius: 2px;
-  /* box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5); */
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+  /* border: 1px solid rgba(0, 0, 0, 0.5); */
 }
 
 .product-image {
