--- a/styles/cart.css
+++ b/styles/cart.css
@@ -55,7 +55,7 @@ body {
   height: 100%;
   background-attachment: fixed;
   background-size: cover;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 
 #greeting {
@@ -64,6 +64,7 @@ body {
 }
 
 .container {
+  margin-bottom: 10%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -73,37 +74,41 @@ body {
 
 .item {
   width: 300px;
+  /* height: 300px; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
-  padding: 10px;
+  border-radius: 2px;
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+  /* border: 1px solid rgba(0, 0, 0, 0.5); */
 }
 
 .cart-image {
-  width: 250px;
+  width: 100%;
   height: 250px;
   object-fit: cover;
-  border-radius: 5px;
+  margin-bottom: 2%;
 }
 
 .cart-name {
   color: #212529;
+  margin-bottom: 2%;
 }
 
 .cart-price {
   font-weight: bolder;
+  margin-bottom: 2%;
 }
 
 .cart-button {
-  width: 70%;
+  width: 80%;
   color: black;
   background: transparent;
   border: 1px solid black;
   font-size: larger;
-  margin-top: 5%;
+  margin-bottom: 2%;
   transition: 0.2s ease-in;
 }
 
